[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Samus/animations/power.tres" type="SpriteFrames" id=1]
[ext_resource path="res://scenes/Samus/Samus.gd" type="Script" id=2]
[ext_resource path="res://classes/SoundManager.gd" type="Script" id=3]
[ext_resource path="res://scenes/Samus/scripts/Animator.gd" type="Script" id=4]
[ext_resource path="res://scenes/Samus/scripts/PhysicsManager.gd" type="Script" id=5]
[ext_resource path="res://scenes/Samus/scripts/WeaponManager.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 17 )

[node name="Samus" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 524288
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 4, 1 )
shape = SubResource( 1 )

[node name="Scripts" type="Node" parent="."]

[node name="SoundManager" type="Node" parent="Scripts"]
script = ExtResource( 3 )

[node name="CollisionManager" type="Node" parent="Scripts"]

[node name="WeaponManager" type="Node" parent="Scripts"]
script = ExtResource( 6 )

[node name="PhysicsManager" type="Node" parent="Scripts"]
script = ExtResource( 5 )

[node name="Animator" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="CannonPositions" type="Node2D" parent="Animator"]
z_index = 999
z_as_relative = false

[node name="neutral" type="Node2D" parent="Animator/CannonPositions"]
visible = false

[node name="aim_down" type="Position2D" parent="Animator/CannonPositions/neutral"]
position = Vector2( -8, 1 )
rotation = -2.35619

[node name="aim_front" type="Position2D" parent="Animator/CannonPositions/neutral"]
position = Vector2( -12, -9 )
rotation = -1.5708

[node name="aim_sky" type="Position2D" parent="Animator/CannonPositions/neutral"]
position = Vector2( 1, -25 )

[node name="aim_up" type="Position2D" parent="Animator/CannonPositions/neutral"]
position = Vector2( -9, -21 )
rotation = -0.785398

[node name="jump" type="Node2D" parent="Animator/CannonPositions"]

[node name="aim_down" type="Position2D" parent="Animator/CannonPositions/jump"]
position = Vector2( -8, -2 )
rotation = -2.35619

[node name="aim_floor" type="Position2D" parent="Animator/CannonPositions/jump"]
position = Vector2( 1, 8 )
rotation = 3.14159

[node name="aim_front" type="Position2D" parent="Animator/CannonPositions/jump"]
position = Vector2( -10, -9 )
rotation = -1.5708

[node name="aim_sky" type="Position2D" parent="Animator/CannonPositions/jump"]
position = Vector2( 0, -29 )

[node name="aim_up" type="Position2D" parent="Animator/CannonPositions/jump"]
position = Vector2( -8, -24 )
rotation = -0.785398

[node name="crouch" type="Node2D" parent="Animator/CannonPositions"]
visible = false

[node name="aim_down" type="Position2D" parent="Animator/CannonPositions/crouch"]
position = Vector2( -9, 11 )
rotation = -2.35619

[node name="aim_front" type="Position2D" parent="Animator/CannonPositions/crouch"]
position = Vector2( -11, 4 )
rotation = -1.5708

[node name="aim_up" type="Position2D" parent="Animator/CannonPositions/crouch"]
position = Vector2( -9, -10 )
rotation = -0.785398

[node name="run" type="Node2D" parent="Animator/CannonPositions"]
visible = false

[node name="aim_down" type="Position2D" parent="Animator/CannonPositions/run"]
position = Vector2( -13, 0 )
rotation = -2.35619

[node name="aim_front" type="Position2D" parent="Animator/CannonPositions/run"]
position = Vector2( -17, -10 )
rotation = -1.5708

[node name="aim_up" type="Position2D" parent="Animator/CannonPositions/run"]
position = Vector2( -14, -22 )
rotation = -0.785398

[node name="sMainLeft" type="AnimatedSprite" parent="Animator"]
position = Vector2( 3, -19 )
frames = ExtResource( 1 )
animation = "jump_turn_aim_sky_left"
frame = 1
flip_h = true

[node name="sMainRight" type="AnimatedSprite" parent="Animator"]
visible = false
position = Vector2( 7, -14 )
frames = ExtResource( 1 )
animation = "jump_turn_aim_sky_right"
frame = 1
playing = true

[node name="sOverlayLeft" type="AnimatedSprite" parent="Animator"]
position = Vector2( 4, 4 )
frames = ExtResource( 1 )
animation = "jump_legs_turn_left"
frame = 1
flip_h = true

[node name="sOverlayRight" type="AnimatedSprite" parent="Animator"]
visible = false
position = Vector2( 7, 0 )
frames = ExtResource( 1 )
animation = "jump_turn_aim_sky_right"
frame = 1
playing = true

[node name="WalljumpRaycastLeft" type="RayCast2D" parent="Animator"]
position = Vector2( 3.5, 0 )
rotation = 4.71239
cast_to = Vector2( 0, 20 )
collision_mask = 524288

[node name="WalljumpRaycastRight" type="RayCast2D" parent="Animator"]
position = Vector2( 3.5, 0 )
rotation = 4.71239
cast_to = Vector2( 0, -20 )
collision_mask = 524288

[node name="Weapons" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 4, -16 )
current = true
zoom = Vector2( 0.232, 0.232 )
smoothing_speed = 15.0

[node name="TestSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 2, -14 )
z_index = 1
frames = ExtResource( 1 )
animation = "jump_turn_aim_sky_right"
